kodex-rs/tui/src/app/snapshots/kodex_tui__app__daemon_menu__tests__daemon_cli_confirmation.snap
---
source: tui/src/app/daemon_menu_tests.rs
assertion_line: 125
expression: "render_bottom_popup(&app.chat_widget,\nwidth).replace(r\"C:\\cli-build\\bin\\kodex\", \"/x/cli-build/bin/kodex\")"
---
  Update daemon and exit Kodex?
  Use this CLI package v0.156.0 from /x/cli-build/bin/kodex. Copy the complete package and pin it
  against automatic updates.
  This may restart the daemon and interrupt active or queued work.
  Kodex exits to update in this terminal. Relaunch it afterward.


› 1. Cancel
  2. Update and exit

  enter select · esc back
